[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/textures/WAR181826587-612x612.jpg" id="2"]

[node name="MainMenu" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
self_modulate = Color(1, 1, 1, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Broken Spear"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Laden"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Optionen"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Ende"